<resources>
    <string name="app_name">Midterm</string>
    <string name="hello">Hello</string>
    <string name="secret">SECRET</string>
    <string name="funkopop_name">FunkoPOP Name</string>
    <string name="funkopop_number">Number</string>
    <string name="funkopop_type">Type</string>
    <string name="funkopop_fandom">Fandom</string>
    <string name="funkopop_on">On? (1 for True / 0 for False)</string>
    <string name="funkopop_ultimate">Ultimate</string>
    <string name="funkopop_price">Price</string>
</resources>