<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SectionSixCoding"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/funkopop_name"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/name_ET"
            />

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/funkopop_number"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:id="@+id/number_ET"
            android:inputType="number"
            />

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/funkopop_type"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:id="@+id/type_ET"
            />

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/funkopop_fandom"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:id="@+id/fandom_ET"
            />

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/funkopop_on"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:id="@+id/on_ET"
            android:inputType="number"
            />

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/funkopop_ultimate"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:id="@+id/ultimate_ET"
            />

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/funkopop_price"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:inputType="numberDecimal"
            android:id="@+id/price_ET"
            />

        <Button
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Save to List"
            android:id="@+id/save_BT"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="================="
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:textColor="@color/design_default_color_primary"
            />

        <ListView
            android:layout_width="350dp"
            android:layout_height="170dp"
            android:id="@+id/list_LV"
            android:layout_gravity="center"
            />

    </LinearLayout>

</ScrollView>